unity/Assets/core/upm/Plugins/puerts_il2cpp/pesapi.h

typedef struct pesapi_value__* pesapi_value;
typedef struct pesapi_callback_info__* pesapi_callback_info;
typedef void (*pesapi_callback)(pesapi_callback_info info);
PESAPI_EXTERN const char* pesapi_get_value_string_utf8(pesapi_env env, pesapi_value value, char* buf, size_t* bufsize);
PESAPI_EXTERN void* pesapi_get_value_binary(pesapi_env env, pesapi_value pvalue, size_t* bufsize);